fixed invisible enemies bug

--- a/app/src/GamePage.scss
+++ b/app/src/GamePage.scss
@@ -7,11 +7,12 @@
 
 .game-over {
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.85);
+    box-shadow: 0px 0px 20px 375px rgba(0,0,0,0.4);
     width: fit-content;
     height: fit-content;
-    padding: 2rem;
-    border-radius: 15px;
+    padding: 4rem;
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
     text-transform: uppercase;
@@ -19,23 +20,26 @@
     color: white;
 
 
-    &__text {
+    &__title {
         font-size: 4rem;
-        margin-block: 2rem;
+        font-weight: 800;
+    }
+    
+    &__text {
+        font-size: 1rem;
+        margin-block: 3rem;
+        align-self: center;
     }
 
     &__buttons {
         display: flex;
+        cursor: pointer;
         justify-content: space-evenly;
-
-        &__button {
-            color: white;
-        }
+        user-select: none;
     }
 }
 
 .wave-count {
-    inset: 1rem 2rem;
     color: yellow;
 
 
@@ -43,8 +47,6 @@
 
 .lives-display {
     color: rgb(255, 0, 0);
-    right: 2rem;
-    top: 1rem;
     display: flex;
     align-items: center;
 
@@ -56,17 +58,21 @@
 .wave-count,
 .lives-display,
 .currency-display {
-    height: fit-content;
-    width: fit-content;
-    position: absolute;
     font-weight: 800;
     font-size: xx-large;
-    -webkit-text-stroke: 1px black;
-    text-shadow: 0px 0px 10px rgba(255,255,255,0.5);
 }
 
 .currency-display {
     top: 1rem;
     color: rgb(47, 255, 0);
-    -webkit-text-stroke: 2px black;
+}
+
+.game-header {
+    position: absolute;
+    width: calc(100% - 6rem);
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0.4);
+    top: 0;
+    padding: 1rem 3rem;
 }
